# ClearTune

./: .editorconfig  .gitignore  CMakeLists.txt  IMPORT_COMPLETE.txt  LICENSE  README.md
.github/: icon-fix-trigger  release-v0.1.0-fixed-icon-status.json  release-v0.1.0-fixed-icon-trigger  release-v0.1.0-status.json  release-v0.1.0-trigger  republish-v0.1.0-verified-trigger
.github/cleartune-icon/: part-00  part-01
.github/icon-payload/: part00.txt  part01.txt  part02.txt  part03.txt  part04.txt  part05.txt  part06.txt  part07.txt  part08.txt  part09.txt  part10.txt  part11.txt  part12.txt
.github/workflows/: assemble-cleartune-icon.yml  build.yml  install-full-resolution-icon.yml  install-icon-from-staging.yml  publish-v0.1.0.yml  release-v0.1.0.yml  republish-v0.1.0-verified.yml
cmake/: PrepareWindowsIcon.ps1
docs/: reverse-engineering.md  testing.md
docs/superpowers/plans/: 2026-07-13-monitor-map.md
src/core/: Candidates.cpp  Candidates.h  Conversions.cpp  Conversions.h  DisplayKey.cpp  DisplayKey.h  MonitorIdentity.cpp  MonitorIdentity.h  MonitorLayout.cpp  MonitorLayout.h  Profile.h  Resolution.h  Theme.cpp  Theme.h  WizardModel.cpp  WizardModel.h
src/win32/: App.cpp  ClearTypeSettings.cpp  ClearTypeSettings.h  ClearTypeSettingsAccessors.cpp  MainWindow.cpp  MainWindow.h  MainWindowControls.cpp  MainWindowNavigation.cpp  MainWindowView.cpp  MonitorMapControl.cpp  MonitorService.cpp  MonitorService.h  Preferences.cpp  Preferences.h  SampleRenderer.cpp  SampleRenderer.h  ThemeService.cpp  ThemeService.h  Win32Error.cpp  Win32Error.h  app.manifest  app.rc
tests/: CoreTests.cpp  FinalPolishTests.cpp  NavigationReviewTests.cpp
tools/: Snapshot-ClearType.ps1  decode_base64_file.py
